test-cases/negative/test_032_function_call_wrong_args.lay
# negative test: function call with wrong number of arguments
# expected: error should be thrown

define function add that takes x and y and returns Number
  return x plus y

call add with 1 argument


